# Direct2D_FPS

./: .gitignore  BuildGame.bat  CMakeLists.txt  README.md  SetupProject.bat
Assets/: ToObjectEmbedder.bat
Assets/shaders/: BuildShaders.bat  shaderTest.hlsl
setup/: InstallCMake.ps1  InstallDep.ps1
src/: Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  Pathfinding.cpp  Pathfinding.h  Player.h  main.cpp  raycastTest.cpp  raycastTest.h
